--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,113 +1,113 @@
 {
-    "manifest_version": 3,
-    "name": "Scholar PDF Reader with Annotations",
-    "default_locale": "en",
-    "description": "__MSG_1726__",
-    "icons": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+  "manifest_version": 3,
+  "name": "Scholar PDF Reader with Annotations",
+  "default_locale": "en",
+  "description": "__MSG_1726__",
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "version": "0.2.4.0",
+  "minimum_chrome_version": "110.0",
+  "permissions": [
+    "webNavigation",
+    "webRequest",
+    "declarativeNetRequest",
+    "scripting",
+    "storage",
+    "offscreen",
+    "clipboardWrite"
+  ],
+  "host_permissions": ["<all_urls>"],
+  "background": {
+    "service_worker": "annotation/background.js",
+    "type": "module"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "run_at": "document_start",
+      "all_frames": true,
+      "js": ["contentscript-compiled.js"]
     },
-    "version": "0.2.4.0",
-    "minimum_chrome_version": "110.0",
-    "permissions": [
-        "webNavigation",
-        "webRequest",
-        "declarativeNetRequest",
-        "scripting",
-        "storage",
-        "offscreen",
-        "clipboardWrite"
-    ],
-    "host_permissions": [
-        "<all_urls>"
-    ],
-    "background": {
-        "service_worker": "annotation/background.js",
-        "type": "module"
+    {
+      "matches": ["*://scholar.google.com/*"],
+      "js": ["authuserscript-compiled.js"]
     },
-    "content_scripts": [
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "run_at": "document_start",
-            "all_frames": true,
-            "js": [
-                "contentscript-compiled.js"
-            ]
-        },
-        {
-            "matches": [
-                "*://scholar.google.com/*"
-            ],
-            "js": [
-                "authuserscript-compiled.js"
-            ]
-        },
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "all_frames": true,
-            "match_origin_as_fallback": true,
-            "js": [
-                "printscript-compiled.js"
-            ]
-        },
-        {
-            "matches": [
-                "*://scholar.google.com/*"
-            ],
-            "include_globs": [
-                "*/scholar_gsb_promo*"
-            ],
-            "css": [
-                "disable_promo.css"
-            ],
-            "all_frames": true
-        },
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "all_frames": true,
-            "js": [
-                "annotation/content.js"
-            ],
-            "run_at": "document_end"
-        }
-    ],
-    "action": {
-        "default_icon": {
-            "16": "icon16.png",
-            "48": "icon48.png",
-            "128": "icon128.png"
-        }
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "match_origin_as_fallback": true,
+      "js": ["printscript-compiled.js"]
     },
-    "incognito": "split",
-    "sandbox": {
-        "pages": [
-            "pdf_loader_iframe.html"
-        ]
+    {
+      "matches": ["*://scholar.google.com/*"],
+      "include_globs": ["*/scholar_gsb_promo*"],
+      "css": ["disable_promo.css"],
+      "all_frames": true
     },
-    "content_security_policy": {
-        "extension_pages": "child-src 'self'; script-src 'self'; object-src 'self'; worker-src 'self'; frame-src 'self'",
-        "sandbox": "sandbox allow-downloads allow-scripts; script-src 'self' blob:; frame-src 'self'"
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "js": ["annotation/content.js"],
+      "run_at": "document_end"
     },
-    "web_accessible_resources": [
-        {
-            "resources": [
-                "reader.html",
-                "pdf_loader_iframe.html"
-            ],
-            "matches": [
-                "<all_urls>"
-            ]
-        }
-    ],
-    "options_page": "annotation/settings.html",
-    "author": {
-        "email": "mcomajoancara@gmail.com"
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "run_at": "document_idle",
+      "js": ["src/notes/bootstrap-notes.js"]
+    },
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "run_at": "document_idle",
+      "js": ["src/ink/bootstrap-ink.js"]
+    },
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "run_at": "document_idle",
+      "js": ["src/excaliboard/bootstrap-virtual.js"]
+    },
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "run_at": "document_idle",
+      "js": ["src/ui/bootstrap-import-export.js"]
     }
+  ],
+  "action": {
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
+  },
+  "incognito": "split",
+  "sandbox": {
+    "pages": ["pdf_loader_iframe.html"]
+  },
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; connect-src 'self'; frame-src 'self'; object-src 'self'; worker-src 'self'",
+    "sandbox": "sandbox allow-downloads allow-scripts; script-src 'self' blob:; frame-src 'self'"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "reader.html",
+        "pdf_loader_iframe.html",
+        "styles/*.css",
+        "excalidraw_host.html",
+        "vendor/excalidraw.bundle.js"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "options_page": "annotation/settings.html",
+  "author": {
+    "email": "mcomajoancara@gmail.com"
+  }
 }
+
